@@ -34,6 +34,7 @@
     "? Explosive Excavation",
     "? KS_Power",
     "? LandfillPainting >= 0.5.2",
+    "? Milestones >= 1.3.19",
     "? ScienceCostTweakerM >= 1.2.0",
     "? SpaceMod >= 1.1.1",
 
