@@ -1,6 +1,6 @@
 {
   "name": "SeaBlockMetaPack",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "factorio_version": "1.1",
   "title": "Sea Block Pack",
   "author": "Trainwreck",
@@ -40,6 +40,7 @@
     "helmod",
     "KS_Power",
     "LandfillPainting",
+    "Milestones",
     "ScienceCostTweakerM",
     "SeaBlock",
     "SpaceMod"
